--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,11 @@
 }
 
 #tope img {
-	margin-left: 100px;
-	margin-right: 10px;
+	margin-left: 15%;
 	height: 200px;
 }
 
 #body {
-	margin-left: 400px;
 }
 
 #footerd img {
