--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@
 	height: 200px;
 }
 
-#body {
+#footerd {
+	bottom: 0%;
+	right: 0%;
+	position: static;
 }
 
-#footerd img {
-	height: 255px;
+#footerc {
+	bottom: 0%;
+	left: 5%;
+	position: static;
 }
